saving progress, pap tests pass